[gd_scene load_steps=4 format=3 uid="uid://cbase_tower"]

[ext_resource type="Script" path="res://scripts/towers/base_tower.gd" id="1_tower"]

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_indicator"]
radius = 50.0

[node name="BaseTower" type="Node2D"]
script = ExtResource("1_tower")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")

[node name="RangeIndicator" type="Node2D" parent="."]
visible = false

[node name="RangeCircle" type="Polygon2D" parent="RangeIndicator"]
color = Color(0.2, 0.6, 1, 0.2)
polygon = PackedVector2Array(-50, 0, -49.24, 6.16, -47, 12.13, -43.3, 17.68, -38.3, 22.63, -32.14, 26.79, -25.0, 30.0, -17.1, 32.14, -8.68, 33.09, 0, 33.33, 8.68, 33.09, 17.1, 32.14, 25.0, 30.0, 32.14, 26.79, 38.3, 22.63, 43.3, 17.68, 47, 12.13, 49.24, 6.16, 50, 0, 49.24, -6.16, 47, -12.13, 43.3, -17.68, 38.3, -22.63, 32.14, -26.79, 25.0, -30.0, 17.1, -32.14, 8.68, -33.09, 0, -33.33, -8.68, -33.09, -17.1, -32.14, -25.0, -30.0, -32.14, -26.79, -38.3, -22.63, -43.3, -17.68, -47, -12.13, -49.24, -6.16)

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
